<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGameActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="151dp"
        android:layout_height="20dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="146dp"
        android:text="@string/creating_a_Game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personNameOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/name_player_1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberTracks" />

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/golfcourse_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/numberTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="114dp"
        android:ems="10"
        android:hint="@string/count_of_Tracks"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/personNameOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseName" />

    <EditText
        android:id="@+id/personNameTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/name_player_2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personNameOne" />

    <Button
        android:id="@+id/btn_create_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="134dp"
        android:text="@string/btn_craete_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personNameTwo" />

</androidx.constraintlayout.widget.ConstraintLayout>